# gapfinder

./: Makefile  README.md  pyproject.toml
evals/: evaluation.ipynb  label_streamlit.py  llm_judge.py  run_scenarios.py  scenarios.csv
gapfinder_agent/: app.py  ingest.py  main.py  tools.py  yt_agent.py  yt_rag_pipeline.py
notebooks/: 01-setup.ipynb  02-rag.ipynb  03-gapfinder.ipynb  subtitles_wjZofJX0v4M.txt  transcript_text_wjZofJX0v4M.txt
tests/: conftest.py  judge.py  test_agent.py  test_judge.py  utils.py
