[project]
name = "ai-buildcamp-project"
version = "0.1.0"
description = "My AI Engineering Buildcamp project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.4",
    "jupyter>=1.0.0",
    "logfire>=4.32.1",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "pydantic-ai>=1.89.1",
    "python-dotenv>=1.0.0",
    "streamlit>=1.57.0",
    "youtube-transcript-api>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"   
